--- a/tmpl/ui/NavBar.tmpl
+++ b/tmpl/ui/NavBar.tmpl
@@ -1,5 +1,5 @@
 <div class="ui secondary pointing menu main-menu">
-  <a class="{{ IsActive .State '/' }} item" href="/">
+  <a class="{{IsActive | .State '/'}} item" href="/">
     Home
   </a>
   <a class="item">
