--- a/tmpl/core/PageStart.tmpl
+++ b/tmpl/core/PageStart.tmpl
@@ -24,4 +24,9 @@
             margin: 1.5em auto;
             max-width: 800px;
         }
+        .main-menu {
+            position:fixed;
+            z-index: 200;
+            width: 100%%;
+        }
     </style>
