--- a/tmpl/ui/Feed.tmpl
+++ b/tmpl/ui/Feed.tmpl
@@ -1,7 +1,7 @@
 <div class="ui link cards home-menu">
   <div class="card">
     <div class="image">
-      <img src="https://placehold.it/300x300">
+      <img src="http://placehold.it/300x300">
     </div>
     <div class="content">
       <div class="header">Matt Giampietro</div>
@@ -24,7 +24,7 @@
   </div>
   <div class="card">
     <div class="image">
-      <img src="https://placehold.it/300x300">
+      <img src="http://placehold.it/300x300">
     </div>
     <div class="content">
       <div class="header">Molly</div>
@@ -47,7 +47,7 @@
   </div>
   <div class="card">
     <div class="image">
-      <img src="https://placehold.it/300x300">
+      <img src="http://placehold.it/300x300">
     </div>
     <div class="content">
       <div class="header">Elyse</div>
