--- a/tmpl/core/PageStart.tmpl
+++ b/tmpl/core/PageStart.tmpl
@@ -21,12 +21,19 @@
 <body>
     <style type="text/css">
         .home-menu {
-            margin: 1.5em auto;
+            margin: 25px auto;
             max-width: 800px;
         }
         .main-menu {
             position:fixed;
             z-index: 200;
             width: 100%%;
+            background:#fff;
+            padding-top:4px;
+        }
+        
+        footer {
+            margin:14px;
+            font-weight: bold;
         }
     </style>
