--- a/tmpl/core/PageStart.tmpl
+++ b/tmpl/core/PageStart.tmpl
@@ -21,19 +21,23 @@
 <body>
     <style type="text/css">
         .home-menu {
-            margin: 25px auto;
-            max-width: 800px;
+            margin: 25px auto !important;
+            max-width: 800px !important;
         }
         .main-menu {
             position:fixed;
             z-index: 200;
             width: 100%%;
-            background:#fff;
-            padding-top:4px;
+            background:#fff !important;
+            padding-top:5px !important;
+        }
+        
+        .home-menu .card {
+            
         }
         
         footer {
-            margin:14px;
+            margin:14px !important;
             font-weight: bold;
         }
     </style>
