--- a/tmpl/ui/Feed.tmpl
+++ b/tmpl/ui/Feed.tmpl
@@ -1,4 +1,5 @@
-<div class="ui link cards home-menu">
+<div class="home-menu">
+<div class="ui link cards">
   <div class="card">
     <div class="image">
       <img src="http://placehold.it/300x300">
@@ -68,4 +69,6 @@
       </span>
     </div>
   </div>
+</div>
+
 </div>
