--- a/tmpl/core/PageStart.tmpl
+++ b/tmpl/core/PageStart.tmpl
@@ -29,7 +29,7 @@
             z-index: 200;
             width: 100%%;
             background:#fff !important;
-            padding-top:5px !important;
+            top:0;
         }
         
         .home-menu .card {
