--- a/tmpl/core/PageStart.tmpl
+++ b/tmpl/core/PageStart.tmpl
@@ -33,7 +33,7 @@
         }
         
         .home-menu .card {
-            
+            margin:0 auto !important;
         }
         
         footer {
