--- a/tmpl/core/PageEnd.tmpl
+++ b/tmpl/core/PageEnd.tmpl
@@ -9,6 +9,7 @@
     <script type="text/javascript">
     $('.ui.accordion')
         .accordion();
+    $('ui.dropdown').dropdown();
     </script>
 </body>
 
