--- a/tmpl/ui/Feed.tmpl
+++ b/tmpl/ui/Feed.tmpl
@@ -2,70 +2,24 @@
 <div class="ui link cards">
   <div class="card">
     <div class="image">
-      <img src="http://placehold.it/300x300">
+      <a href="/post"><img src="http://placehold.it/300x300"></a>
     </div>
     <div class="content">
-      <div class="header">Matt Giampietro</div>
+      <div class="header"><a href="/post">Sample Post</a></div>
       <div class="meta">
-        <a>Friends</a>
+        <a>Marketing, Post category</a>
       </div>
       <div class="description">
-        Matthew is an interior designer living in New York.
+        This is a sample post that the website will share....
       </div>
     </div>
     <div class="extra content">
       <span class="right floated">
-        Joined in 2013
+        Shared 1 hour ago
       </span>
       <span>
         <i class="user icon"></i>
-        75 Friends
-      </span>
-    </div>
-  </div>
-  <div class="card">
-    <div class="image">
-      <img src="http://placehold.it/300x300">
-    </div>
-    <div class="content">
-      <div class="header">Molly</div>
-      <div class="meta">
-        <span class="date">Coworker</span>
-      </div>
-      <div class="description">
-        Molly is a personal assistant living in Paris.
-      </div>
-    </div>
-    <div class="extra content">
-      <span class="right floated">
-        Joined in 2011
-      </span>
-      <span>
-        <i class="user icon"></i>
-        35 Friends
-      </span>
-    </div>
-  </div>
-  <div class="card">
-    <div class="image">
-      <img src="http://placehold.it/300x300">
-    </div>
-    <div class="content">
-      <div class="header">Elyse</div>
-      <div class="meta">
-        <a>Coworker</a>
-      </div>
-      <div class="description">
-        Elyse is a copywriter working in New York.
-      </div>
-    </div>
-    <div class="extra content">
-      <span class="right floated">
-        Joined in 2014
-      </span>
-      <span>
-        <i class="user icon"></i>
-        151 Friends
+        75 Views
       </span>
     </div>
   </div>
