--- a/tmpl/ui/Feed.tmpl
+++ b/tmpl/ui/Feed.tmpl
@@ -1,9 +1,11 @@
 <div class="home-menu">
 <div class="ui link cards">
   <div class="card">
+    <a href="/post">
     <div class="image">
-      <a href="/post"><img src="http://placehold.it/300x300"></a>
+      <img src="http://placehold.it/300x300">
     </div>
+    </a>
     <div class="content">
       <div class="header"><a href="/post">Sample Post</a></div>
       <div class="meta">
