--- a/tmpl/ui/NavBar.tmpl
+++ b/tmpl/ui/NavBar.tmpl
@@ -5,7 +5,13 @@
   <a class="item">
       Academy
   </a>
-  <div class="ui dropdown item">
+  <a class="item">
+      SEO Analyzer
+  </a>
+  <a class="item" href="/url-short">URL Shortener</a>
+  
+  <!--
+   <div class="ui dropdown item">
     <i class="dropdown icon"></i>
     Tools
     <div class="menu">
@@ -13,7 +19,7 @@
       <a class="item" href="/url-short">URL Shortener</a>
       <a class="item">Super Tools</a>
     </div>
-  </div>
+  </div> -->
  
   <div class="right menu">
     <a class="ui item">
