--- a/tmpl/ui/URLTool.tmpl
+++ b/tmpl/ui/URLTool.tmpl
@@ -1,10 +1,13 @@
+<div style="height:80px"></div>
 
+<div class="home-menu">
 <div class="ui success message">
   <i class="icon check"></i>
   <div class="header">
       Link Generated
   </div>
    Access your link here : <a href="#">https://xbj.com/120-dwd</a> <i class="icon copy"></i>.
+</div>
 </div>
 
 <div class="home-menu">
@@ -15,12 +18,12 @@
   <div class="fields">
     <div class="field">
       <label>Enter URL</label>
-      <input required="" type="url" placeholder="URL" name="url">
-    </div>
+      <input style="width:100%%" required="" type="url" placeholder="URL" name="url">
+    </div><br/>
     <div class="field">
-        <button class="ui primary button">
-            Get
-        </button>
+       <button class="ui primary button">
+         Shorten
+       </button>
     </div>
   </div>
 </div>
