--- a/tmpl/ui/URLTool.tmpl
+++ b/tmpl/ui/URLTool.tmpl
@@ -16,16 +16,17 @@
 <form action="" method="POST">
 <div class="ui form">
   <div class="fields">
-    <div class="field">
+    <div style="width:100%%" class="field">
       <label>Enter URL</label>
       <input style="width:100%%" required="" type="url" placeholder="URL" name="url">
     </div><br/>
-    <div class="field">
+    
+  </div>
+</div>
+<div class="field">
        <button class="ui primary button">
          Shorten
        </button>
     </div>
-  </div>
-</div>
 </form>
 </div>
