--- a/web/academy.tmpl
+++ b/web/academy.tmpl
@@ -4,7 +4,7 @@
 
 {{ bNavBar $state }}
 
-<div class="main-menu">
+<div class="home-menu">
     <div class="ui grid">
         
         <div class="six wide column">
