--- a/tmpl/core/PageStart.tmpl
+++ b/tmpl/core/PageStart.tmpl
@@ -23,6 +23,7 @@
         .home-menu {
             margin: 30px auto !important;
             max-width: 960px !important;
+            padding-top:80px !important;
         }
         .main-menu {
             position:fixed;
