--- a/web/academy.tmpl
+++ b/web/academy.tmpl
@@ -7,7 +7,7 @@
 <div class="home-menu">
     <div class="ui grid">
         
-        <div class="six wide column">
+        <div class="four wide column">
             <div class="ui vertical menu">
               <a class="active teal item">
                 Trending
@@ -29,7 +29,7 @@
               </div>
             </div>
         </div>
-        <div class="ten wide column">
+        <div class="twelve wide column">
             <div class="ui link cards">
                 {{ Card }}
                 {{ Card }}
