--- a/tmpl/core/PageStart.tmpl
+++ b/tmpl/core/PageStart.tmpl
@@ -40,5 +40,6 @@
         footer {
             margin:14px !important;
             font-weight: bold;
+            text-align: center !important;
         }
     </style>
