--- a/web/g-tools.tmpl
+++ b/web/g-tools.tmpl
@@ -47,7 +47,7 @@
                   <div class="two fields">
                     <div class="field">
                       <label>Subject</label>
-                      <input placeholder="First Name" type="text">
+                      <input placeholder="Email subject line" type="text">
                     </div>
                     <div class="field">
                       <label>Contact List</label>
